--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
 <p>At CruizTech, we don’t just build technology—we engineer transformation.<br> Founded with a bold vision to bridge the gap between<br> cutting-edge innovation and real-world impact, CruizTech is a dynamic tech company committed <br>to delivering smart, scalable, and sustainable digital solutions.
 🌐 Who We Are
 CruizTech is a forward-thinking technology firm specializing in:<br>
-- Custom Software Development
-- Cloud Infrastructure & DevOps<br>
-- AI & Machine Learning Solutions
-- Mobile & Web App Development
-- IT Consulting & Digital Transformation</p>
+<h5>
+  - Custom Software Development.
+- Cloud Infrastructure & DevOps
+- AI & Machine Learning Solutions.
+- Mobile & Web App Development.
+- IT Consulting & Digital Transformation.
+</h5>
+</p>
 
   </section>
 
