--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <nav>
       <h1 class="logo">CruizTech</h1>
       <ul class="nav-links">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Contact</a></li>
+  <button>Get started</button>
       </ul>
     </nav>
     <div class="hero-content">
@@ -79,3 +77,4 @@ CruizTech is a forward-thinking technology firm specializing in:<br>
 
 </body>
 </html>
+
