--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <h1 class="logo">CruizTech</h1>
       <ul class="nav-links">
-  <button class="btn">Get started</button>
+  <button class="b">Get started</button>
       </ul>
     </nav>
     <div class="hero-content">
@@ -77,5 +77,6 @@ CruizTech is a forward-thinking technology firm specializing in:<br>
 
 </body>
 </html>
+
 
 
