--- a/index.html
+++ b/index.html
@@ -95,26 +95,12 @@ CruizTech is a forward-thinking technology firm specializing in:<br>
           Instagram</a> |
  </div>
 
-  <script>
-    const hamburger = document.getElementById('hamburger');
-    const navLinks = document.getElementById('navLinks');
-    
-    hamburger.addEventListener('click', () => {
-      hamburger.classList.toggle('active');
-      navLinks.classList.toggle('active');
-    });
-    
-    // Close menu when a link is clicked
-    document.querySelectorAll('.nav-links a').forEach(link => {
-      link.addEventListener('click', () => {
-        hamburger.classList.remove('active');
-        navLinks.classList.remove('active');
-      });
-    });
+  <script src="script.js">
   </script>
 
 </body>
 </html>
+
 
 
 
