--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<header class="e">
+
   <header class="hero">
     <nav>
       <h1 class="logo">CruizTech<i class="fa fa-cog" aria-hidden="true"></i></h1>
@@ -19,8 +19,9 @@
         <li><a href="#features">Features</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
-      <a href="https://www.facebook.com//Boicruiz" target="_blank">  <button class="btn">More info</button></a>
       </ul>
+      <a href="https://www.facebook.com/Boicruiz" target="_blank"><button class="btn">More info</button></a>
+     
       <div class="hamburger" id="hamburger">
         <span></span>
         <span></span>
@@ -55,7 +56,7 @@
 <p>At CruizTech, we don’t just build technology—we engineer transformation.<br> Founded with a bold vision to bridge the gap between<br> cutting-edge innovation and real-world impact, CruizTech is a dynamic tech company committed <br>to delivering smart, scalable, and sustainable digital solutions.
 🌐 Who We Are
 CruizTech is a forward-thinking technology firm specializing in:<br>
-</br>
+
 
 <h5>
   - Custom Software Development.
@@ -74,7 +75,7 @@ CruizTech is a forward-thinking technology firm specializing in:<br>
 
   <section class="testimonials">
     <h2>What our users say</h2>
-    <p>The big users of technology is bringing a great big innovation <br>intact to quantum marketing economy at large up-bringing great Effeciency.</p>
+    <p>The big users of technology is bringing a great big innovation <br>intact to quantum marketing economy at large upbringing great effeciency.</p>
     <div class="testimonial">
       <p>"Absolutely transformed our workflow!" <br> Bringing great momentum of great innovation.</p>
       <span>- Cletus Martin</span>
@@ -89,18 +90,18 @@ CruizTech is a forward-thinking technology firm specializing in:<br>
     <p>&copy; 2025 CruizTech. All rights reserved.<br>
     Sponsored by the Surecoins Foundation.</p>
  <div class="socials">
-     <a href="https://www.facebook.com//Boicruiz" > <i class="fa-brands fa-facebook"> </i>    Facebook</a>
+     <a href="https://www.facebook.com/Boicruiz" > <i class="fa-brands fa-facebook"> </i>    Facebook</a>
           |
-        <a href="https://www.instagram.com//cruiz_daboi" > <i class="fa-brands fa-instagram"></i>
-          Instagram</a> |
+        <a href="https://www.instagram.com/cruiz_daboi" > <i class="fa-brands fa-instagram"></i>
+          Instagram</a>
  </div>
 
-  <script src="script.js">
-  </script>
+  </footer>
+
+  <script src="script.js"></script>
 
 </body>
 </html>
-
 
 
 
